koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
/* ... */
.consentButtons {
    flex-grow: 1;
    margin-top: 10px;
    text-align: left;
    white-space: normal;
}

/* Cookie consent modal */
#cookieConsentModal {
    .modal-dialog {
        width: 700px;
    }

    .consentModalItem {
        align-items: center;
        border: 1px solid #CCC;
        border-radius: 5px;
        display: flex;
        padding: 10px 20px;
    }

    .consentModalItem:not( :last-child ) {
        margin-bottom: 20px;
    }

    .consentItemCheckbox {
        padding-right: 20px;
    }

    .consentItemName {
        font-weight: bold;
    }

    #cookieConsentPopupText {
        margin: 20px 0;
    }
}

.chocolat-wrapper {
    z-index: 1050;

    --chocolat-icon-left: url( "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' stroke-linecap='round' stroke-linejoin='round' viewBox='0 0 32 32'%3E%3Ccircle fill='%23408540' cx='16' cy='16' r='16' fill-opacity='.9'/%3E%3Cpath fill='none' stroke='%23fff' stroke-width='1.3' d='M15.3 20.7 10.7 16l4.6-4.7m7.4 4.7h-12'/%3E%3C/svg%3E" );
    --chocolat-icon-right: url( "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle fill='%23408540' cx='16' cy='16' r='16' fill-opacity='.9'/%3E%3Cpath d='m16.7 11.3 4.6 4.7-4.6 4.7M9.3 16h12' fill='none' stroke='%23fff' stroke-width='1.3'/%3E%3C/svg%3E" );
    --chocolat-icon-loader: url( "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='38' height='38'%3E%3Cg transform='translate(1 1)' stroke-width='2' fill='none' fill-rule='evenodd'%3E%3Ccircle stroke='%23000' cx='18' cy='18' r='18'/%3E%3Cpath d='M36 18C36 8 28 0 18 0' stroke='%236faf44'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 18 18' to='360 18 18' dur='1s' repeatCount='indefinite'/%3E%3C/path%3E%3C/g%3E%3C/svg%3E" );
    --chocolat-icon-close: url( "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' stroke-linecap='round'%3E%3Ccircle fill='%23408540' cx='16' cy='16' r='16' fill-opacity='.9'/%3E%3Cpath d='m12 12 8 8m0-8-8 8' fill='none' stroke='%23fff' stroke-width='1.3'/%3E%3C/svg%3E" );

    a:link,
    a:visited,
    a:hover,
    a:active {
        color: #FFF;
    }

    .chocolat-bottom {
        background: rgba( 0, 0, 0, .7 );
    }
}

#set_library_controls {
    align-items: center;
    display: flex;

    div:first-child {
        flex-grow: 1;
    }

    a.btn {
        border-radius: 0;
        font-size: 13px;
    }
}

#setlibrary_panel {
    .setlibrary_panel_open {
        border-bottom: 1px solid #CCC;
        border-top: 1px solid #CCC;
    }

    fieldset {
        background-color: #554B4D;
        margin: 0;

        &.rows {
            float: none;
            padding: 0;
            width: auto;
        }

        &.action {
            padding: .5em 0 1em 1em;
        }
    }

    legend {
        display: none;
    }

    label {
        color: #FFF;
        display: block;
        float: none;
        font-weight: normal;
        margin: 0;
        padding-bottom: .2em;
        text-align: left;
        width: unset;
    }

    select {
        width: 80%;
    }

    #cancel_set_library {
        color: #FFF;
        padding: 0.4em 20px;

        &:hover {
            background-color: $background-color-primary;
            text-decoration: none;
        }
    }
}

#circ_request {
    fieldset:has(fieldset.disabled) {
        cursor: pointer;
    }
    fieldset {
        position: relative;

        &.disabled {
            pointer-events: none;
        }

        &.rows:has(fieldset.enabled) {
            border: 1px solid #408540;

            &::before {
                font-family: 'Font Awesome 6 Free';
                content: "\f058";
                color: #408540;
                position: absolute;
                top: -14px;
                left: -18px;
                font-size: 22px;
            }
        }
    }
}

.dropdown-menu {
    box-shadow: 0 2px 6px rgba(0,0,0,0.175);
}

.navbar.fixed-bottom {
    background: #FFF none;
    border-radius: 0;
    border-top: 1px solid #ADADAD;
    box-shadow: none;

    fieldset {
        margin: 0;
        text-align: right;
    }

    .navbar-inner {
        min-height: 0;
        padding: .4em 0;
    }

    .nav > li {
        border-right: 1px solid #CCC;

        > a {
            font-weight: normal;
        }

        &:last-child {
            border-right: 0;
        }

        &.navbar-text {
            line-height: normal;
            padding: .4em .7em;
        }
    }
}

.badge {
    a {
        font-weight: bold;
    }
}

@import "header";
@import "toolbar";
@import "forms";

@media only screen and ( min-width: 608px ) {
    .consentButtons {
        text-align: right;
        white-space: nowrap;
    }
}

@media only screen and ( min-width: 576px ) {
    body {
        padding-bottom: 4em;
    }

    #changelanguage {
        bottom: 0;
        display: block;
        left: 0;
        position: fixed;
        right: 0;
        z-index: 1030;
    }

    .buttons-list {
        max-width: 260px;
    }
}

@media ( min-width: 768px ) {
    .nav-tabs {
        .nav-link {
            border-radius: 0;
            margin: 0 .4em calc( -1 * var( --bs-nav-tabs-border-width ) ) 0;
        }
    }
}

@media ( max-width: 767px ) {
    #marcPreview {
        margin: 0;
        width: auto;
    }
}
/* ... */

